--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ form .form-social a i{
     height: 50px;
     line-height: 50px;
     border-radius: 50%;
-    margin: 0 5px;
+    margin: 5px;
     color: #fff;
     font-size: 20px;
     border: 2px solid var(--primaryColor);
