--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ body{
     font-family: 'Cairo', sans-serif;
     text-transform: capitalize;
     font-size: 16px;
-    color: var(--lightColor)
+    color: var(--lightColor);
+    user-select: none;
 }
 ul{
     list-style: none;
