--- a/css/style.css
+++ b/css/style.css
@@ -349,14 +349,16 @@ form .form-social a i{
     line-height: 50px;
     border-radius: 50%;
     margin: 5px;
-    color: #fff;
+    color: var(--lightColor);
     font-size: 20px;
-    border: 2px solid var(--primaryColor);
-    transition: var(--transition)
+    border: 1.9px solid var(--lightColor);
+    transition: var(--transition);
 }
 
 form .form-social a i:hover{
-    transform: scale(1.2);
+    /* transform: scale(1.2); */
+    text-shadow: 0 0 10px var(--lightColor), 0 0 20px var(--lightColor), 0 0 30px var(--lightColor),
+    0 0 50px var(--lightColor);
 }
 
 /* end contact */
