--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body{
     font-size: 16px;
     color: var(--lightColor);
     user-select: none;
+    overflow-x: hidden;
 }
 ul{
     list-style: none;
